# go-rules-rust-example

./: .env  Cargo.toml
rules/: test_rule.json  test_rule_2.json
src/: main.rs  main_config.rs
