[package]
name = "go_rules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
config = "0.13.3"
dotenv = "0.15.0"
zen-engine = "0.5.2"
serde = { version = "1.0.160", features = ["derive"] }
actix-cors = "0.6.4"
serde_json = "1.0.96"
